assets/css/main.css
/* ... */
/*
CREDITS
/////////////////////////////////////////////////////////////////*/
.credits {
  color: #aaa;
  font-size: 0.875rem;
  padding-bottom: 3rem;
}
.credits a {
  color: #aaa;
}
.credits a:hover {
  color: #444;
  text-decoration: none;
}
.credits__body {
  display: flex;
  justify-content: space-between;
}
/*
SECTION TITLE
/////////////////////////////////////////////////////////////////*/
.section-title {
  border-bottom: 3px solid #d4d5d3;
  color: #aaa;
  font-family: "ff-netto-web", Helvetica, Arial, sans-serif;
  font-size: 0.875rem;
  font-weight: normal;
  margin: 0 0 1rem;
  padding: 0 0 2px;
  text-transform: uppercase;
}
.section-title__part--right {
  float: right;
}
/* TOOLS
/////////////////////////////////////////////////////////////////*/
.tools {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 40px;
  z-index: 2000;
}
.tools--active {
  position: fixed;
}
.tools__container {
  width: 950px;
  margin-right: auto;
  margin-left: auto;
  display: flex;
  justify-content: space-between;
}
.tools__section {
  position: relative;
}
@media (min-width: 768px) and (max-width: 979px) {
  .tools__container {
    width: 710px;
  }
}
@media (max-width: 767px) {
  .tools__container {
    width: auto;
  }
}
/* HOME LINK
/////////////////////////////////////////////////////////////////*/
.home__link {
  align-items: center;
  color: #aaa;
  display: flex;
  font-family: "ff-netto-web", Helvetica, Arial, sans-serif;
  height: 20px;
  opacity: 0;
  padding: 10px;
  position: fixed;
  transform: translate(-10px, -100%);
  visibility: hidden;
  transition: opacity 400ms ease-in 0ms, transform 400ms ease-out 0ms, visibility 400ms ease-in 0ms;
}
.home__link--active {
  opacity: 1;
  visibility: visible;
  transform: translate(-10px, 0);
  transition: opacity 400ms ease-out 800ms, transform 400ms ease-out 800ms, visibility 400ms ease-out 800ms;
}
@media (max-width: 767px) {
  .home__link {
    transform: translate(10px, -50px);
  }
  .home__link--active {
    transform: translate(10px, 0);
  }
}
.home__link__label {
  display: inline-block;
  text-transform: uppercase;
  margin-left: 0.5em;
}
/* NAVIGATION TRIGGER
/////////////////////////////////////////////////////////////////*/
.navigation__trigger {
  display: block;
  padding: 10px calc(20px + 0.5em) 10px 10px;
  position: absolute;
  right: 0;
}
@media (max-width: 767px) {
  .navigation__trigger {
    transform: translateX(-20px);
  }
}
.navigation__trigger__label {
  color: #aaa;
  display: inline-block;
  font-family: "ff-netto-web", Helvetica, Arial, sans-serif;
  user-select: none;
  text-transform: uppercase;
  transition: color 200ms;
}
.navigation__trigger:hover .navigation__trigger__label,
.navigation__trigger--active.navigation__trigger--contrast:hover .navigation__trigger__label {
  color: #333;
}
.navigation__trigger--contrast:hover .navigation__trigger__label {
  color: #fff;
}

.navigation__trigger__icon {
  position: absolute;
  top: 50%;
  right: 0px;
  display: block;
  width: 20px;
  height: 2px;
  margin-top: -2px;
  background-color: #aaa;
  font-size: 0px;
  user-select: none;
  transition: background-color 200ms;
}
.navigation__trigger--active .navigation__trigger__icon {
  background-color: transparent;
}
.navigation__trigger__icon:before,
.navigation__trigger__icon:after {
  position: absolute;
  left: 0;
  width: 100%;
  height: 100%;
  background: #aaa;
  content: "";
  transition: transform 200ms, background-color 200ms;
}
.navigation__trigger:hover .navigation__trigger__icon,
.navigation__trigger:hover .navigation__trigger__icon:before,
.navigation__trigger:hover .navigation__trigger__icon:after,
.navigation__trigger--active.navigation__trigger--contrast:hover .navigation__trigger__icon:before,
.navigation__trigger--active.navigation__trigger--contrast:hover .navigation__trigger__icon:after {
  background-color: #333;
}
.navigation__trigger--contrast:hover .navigation__trigger__icon,
.navigation__trigger--contrast:hover .navigation__trigger__icon:before,
.navigation__trigger--contrast:hover .navigation__trigger__icon:after {
  background-color: #fff;
}
.navigation__trigger--active:hover .navigation__trigger__icon {
  background-color: transparent;
}
.navigation__trigger .navigation__trigger__icon:before {
  transform: translateY(-200%);
}
.navigation__trigger .navigation__trigger__icon:after {
  transform: translateY(200%);
}
.navigation__trigger--active .navigation__trigger__icon:before {
  transform: translateY(0) rotate(45deg);
}
.navigation__trigger--active .navigation__trigger__icon:after {
  transform: translateY(0) rotate(-45deg);
}
.navigation__trigger:hover .navigation__trigger__icon:before {
  transform: translateY(0) rotate(90deg);
}
.navigation__trigger:hover .navigation__trigger__icon:after {
  transform: translateY(0) rotate(-90deg);
}
.navigation__trigger--active:hover .navigation__trigger__icon:before {
  transform: translateY(0) rotate(45deg);
}
.navigation__trigger--active:hover .navigation__trigger__icon:after {
  transform: translateY(0) rotate(-45deg);
}
/* NAVIGATION
/////////////////////////////////////////////////////////////////*/
.navigation {
  background: #e3e3e0;
  bottom: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100%;
  left: 0;
  opacity: 0;
  position: fixed;
  top: 0;
  visibility: hidden;
  width: 100%;
  z-index: 1000;
  /* This timing applies on the way OUT */
  transition: visibility 400ms ease-in-out 400ms, opacity 400ms ease-in-out 400ms;
}
.navigation--active {
  visibility: visible;
  opacity: 1;
  /* This timing applies on the way IN */
  transition: visibility 400ms ease-out 0ms, opacity 400ms ease-out 0ms;
}
.navigation__panel {
}
.navigation__column {
  opacity: 0;
  transform: translateY(-50px);
  /* This timing applies on the way OUT */
  transition: opacity 400ms ease-in 0ms, transform 400ms ease-in 0ms;
}
.navigation__column--right {
  transition-delay: 200ms;
}
/* ... */

